<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".BookingForm">

    <ScrollView
        android:id="@+id/scroldelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"

        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/search_bg"
            tools:layout_editor_absoluteX="-31dp">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameEst"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/roboto_bold"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="9dp"
                        android:layout_height="9sp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/pointbooking"
                        android:elevation="5dp"
                        tools:ignore="MissingConstraints" />

                    <TextView
                        android:id="@+id/addressBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="-17dp"
                        android:fontFamily="@font/roboto"
                        android:text="TextView"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/closest"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="-50dp"
                    android:layout_marginTop="29dp"
                    android:background="@drawable/booking_button"
                    android:contentDescription="@string/app_name"
                    android:elevation="1dp"
                    android:onClick="openMain"
                    android:stateListAnimator="@null"
                    android:translationZ="5dp"
                    app:srcCompat="@drawable/ic_delete"
                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:background="@color/buttonBack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/countperstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/countpers"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/countminus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="countMinus"
                    android:text="-"
                    android:textColor="@color/black"
                    android:textSize="38sp" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="50dp"
                    android:layout_height="44dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/countback"
                    android:elevation="5dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_horizontal"
                    android:text="1"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/countplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="countPlus"
                    android:text="+"
                    android:textColor="@color/black"
                    android:textSize="35sp" />
            </LinearLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="2sp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="35dp"
                android:background="@color/buttonBack" />

            <TextView
                android:id="@+id/dataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/data"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <HorizontalScrollView
                android:id="@+id/scrolldata"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:id="@+id/lineardata"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/countback"/>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <HorizontalScrollView
                android:id="@+id/scrolltime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <LinearLayout
                    android:id="@+id/lineartime"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"/>

            </HorizontalScrollView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/booking_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:layout_gravity="center"
                android:background="@drawable/booking_button_noactivity"
                android:elevation="6dp"
                android:fontFamily="@font/roboto_bold"
                android:stateListAnimator="@null"
                android:text="@string/booking"
                android:textColor="@color/black"
                android:onClick="booking"
                android:textSize="16sp"
                android:layout_marginBottom="60dp"
                android:translationZ="4dp" />

        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/layout_bg"
        android:topLeftRadius="15dp"
        android:topRightRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/navigation"
            android:onClick="openMain"
            android:topLeftRadius="0dp"
            android:topRightRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/map_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_menu_nav"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/map_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/navigation"
            android:onClick="openMap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/reservation_button"
            app:layout_constraintStart_toEndOf="@+id/main_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_near_me"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/reservation_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openReservation"
            android:background="@color/navigation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/user_button"
            app:layout_constraintStart_toEndOf="@+id/map_button"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_reservation_2"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/navigation"
            android:onClick="openProfile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/reservation_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.68"
            app:srcCompat="@drawable/ic_user"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_bg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pagename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="Бронирование заведения"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>